--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
+            background-color: #f7f7f7; /* Light gray background */
+            color: #333; /* Dark gray text color */
         }
         #user-status {
             margin-bottom: 20px;
